Fix table overflow

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -98,6 +98,6 @@ pre {
     .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
 }
 
-.scroll_wrap{
+#scroll_wrap{
     overflow-x: auto;
 }
